kubernetes/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: obo-ns
  labels:
    app: obo-stadium
    environment: production
