kubernetes/05-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: obo-app-svc
  namespace: obo-ns
  labels:
    app: obo-app
spec:
  type: ClusterIP
  selector:
    app: obo-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  sessionAffinity: None
